Add Geolocation API.

--- a/Cutec.Blazor.WebAPIs.WebAssemblyDemo/wwwroot/index.html
+++ b/Cutec.Blazor.WebAPIs.WebAssemblyDemo/wwwroot/index.html
@@ -20,7 +20,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="_content/Cutec.Blazor.WebAPIs/Common.js"></script>
+    <script src="_content/Cutec.Blazor.WebAPIs/All.js"></script>
 </body>
 
 </html>
